# LyckyWheel

./: CMakeLists.txt  LICENSE  README.md  config.json  main.cpp
Tools/: jsonparser.cpp  jsonparser.h
qml/: MainWindow.qml  RollingLottery.qml  Wheel.qml
